applications/transmission/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission          # < name of ingress entry
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt" # < use letsencrypt-prod application in kubernetes to generate ssl certificate
spec:
  rules:
  - host: transmission.internal.zem.org.uk
    http:
      paths:
      - path: /
        pathType: Prefix  # pathType no longer has a default value in v1; "Exact", "Prefix", or "ImplementationSpecific" must be specified
        backend:
          service:
            name: transmission
            port: 
              name: web-interface  # < same label as the port in the service tcp file
  tls: # < placing a host in the TLS config will indicate a cert should be created
  - hosts:
    - transmission.internal.zem.org.uk
    secretName: transmission-tls # < cert-manager will store the created certificate in this secret.
